Add blockquote and restyle divs using flexbox.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Vanessa Palacios Sharma</h1>
       <h4>Front-End Junior Developer</h4>
     </header>
@@ -29,9 +29,12 @@
       <div class = "blocks">
         div 3
       </div>
-      <div class = "blocks">
-        div 4
-      </div>
+  </div>
+  <div class="quote">
+    <blockquote cite="https://skillcrush.com/2014/10/21/advice-for-web-designers/">
+      What separates design from art is that design is meant to be functional.
+    </blockquote>
+
   </div>
     </ul>
     </div>
