Add scripts.js and use jquery for hover animation in nav bar.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Let's Talk Code</title>
+    <title>About</title>
     <link href="https://fonts.googleapis.com/css?family=Pompiere" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -18,24 +18,16 @@
       <a  class="hoverEffectSelect" href="about.html">About</a>
       <a  class="hoverEffectSelect" href="projects.html">Projects</a>
   </nav>
-  <br>
-  <div class="content-box">
-      <div class = "blocks">
-        ProACTIVE
-      </div>
-      <div class = "blocks">
-        Responsive
-      </div>
-      <div class = "blocks">
-        Functional
-      </div>
-  </div>
-  <div class="quote">
-    <blockquote cite="https://skillcrush.com/2014/10/21/advice-for-web-designers/">
-      What separates design from art is that design is meant to be functional.
-    </blockquote>
-  </div>
-    </ul>
-    </div>
+    <div id="thumbnail">
+     <section>
+      <img  class="profile-pic" src="css/images/profile_pic.jpg" alt="profile pic">
+       <p>Hey! My name is Vanessa and this is my website. I have a deep interests in design and front end development.</p>
+     </section>
+     <footer>
+       <!-- <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+       <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+       <p>&copy; 2014 Nick Pettit.</p> -->
+     </footer>
+   </div>
   </body>
 </html>
