Add footer with social media handles.

--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
        <p>Hey! My name is Vanessa and this is my website. I have a deep interests in design and front end development.</p>
      </section>
      <footer>
-       <!-- <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-       <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-       <p>&copy; 2014 Nick Pettit.</p> -->
+       <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
+       <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
+       <p>&copy; 2017 Vanessa Palacios Sharma.</p>
      </footer>
    </div>
   </body>
