Remove old navigation class styling.

--- a/about.html
+++ b/about.html
@@ -21,12 +21,13 @@
     <div id="thumbnail">
      <section>
       <img  class="profile-pic" src="css/images/profile_pic.jpg" alt="profile pic">
-       <p>Hey! My name is Vanessa and this is my website. I have a deep interests in design and front end development.</p>
+       <p>Hey! My name is Vanessa and this is my website. I have a deep interests in design and front end development. Feel free to checkout my Linkedin and Github accounts.</p>
      </section>
      <footer>
        <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
        <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
-       <p>&copy; 2017 Vanessa Palacios Sharma.</p>
+       <br>
+       <p>&copy; 2017 Vanessa Palacios Sharma</p>
      </footer>
    </div>
   </body>
