Correct styling for about page for non scroll view.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <blockquote cite="https://skillcrush.com/2014/10/21/advice-for-web-designers/">
       What separates design from art is that design is meant to be functional.
     </blockquote>
+    <footer>
+      <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
+      <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
+    </footer>
   </div>
     </ul>
     </div>
