Correct mispelled word.

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div id="thumbnail">
      <section>
       <img  class="profile-pic" src="css/images/profile_pic.jpg" alt="profile pic">
-       <p>Hey! My name is Vanessa and this is my website. I have a deep interests in design and front end development. Feel free to checkout my Linkedin and Github accounts.</p>
+       <p>Hey! My name is Vanessa and this is my website. I have a deep interest in design and front end development. Feel free to checkout my Linkedin and Github accounts.</p>
      </section>
      <footer>
        <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
