Remove divs in projects file and add img.

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <h1>Vanessa Palacios Sharma</h1>
-      <h4>Front-End Junior Developer</h4>
+      <h3>Front-End Junior Developer</h4>
     </header>
   <nav>
       <a  class="hoverEffectSelect" href="index.html">Home</a>
@@ -20,20 +20,14 @@
   </nav>
   <br>
   <div class="content-box">
-      <div class = "blocks">
-        ProACTIVE
-      </div>
-      <div class = "blocks">
-        Responsive
-      </div>
-      <div class = "blocks">
-        Functional
-      </div>
+      <img src="css/images/Octocat.png" alt="">
   </div>
+  <!-- <div class="footer">
     <footer>
       <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
       <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
     </footer>
+  </div> -->
     </ul>
   </body>
 </html>
