--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <h1>Vanessa Palacios Sharma</h1>
-      <h4>Front-End Junior Developer</h4>
+      <h3>Front-End Junior Developer</h4>
     </header>
   <nav>
       <a  class="hoverEffectSelect" href="index.html">Home</a>
@@ -23,12 +23,14 @@
       <img  class="profile-pic" src="css/images/profile_pic.jpg" alt="profile pic">
        <p>Hey! My name is Vanessa and this is my website. I have a deep interest in design and front end development. Feel free to checkout my Linkedin and Github accounts. You can also contact me by <a href="mailto:vanelunasharma@gmail.com?subject=contact">email.</a></p>
      </section>
+     <div class="footer">
      <footer>
        <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
        <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
+       <!-- <p>&copy; 2017 Vanessa Palacios Sharma</p> -->
        <br>
-       <p>&copy; 2017 Vanessa Palacios Sharma</p>
      </footer>
+   </div>
    </div>
   </body>
 </html>
