--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <h1>Vanessa Palacios Sharma</h1>
-      <h4>Front-End Junior Developer</h4>
+      <h3>Front-End Junior Developer</h4>
     </header>
   <nav>
       <a  class="hoverEffectSelect" href="index.html">Home</a>
@@ -34,10 +34,12 @@
     <blockquote cite="https://skillcrush.com/2014/10/21/advice-for-web-designers/">
       What separates design from art is that design is meant to be functional.
     </blockquote>
+  <div class="footer">
     <footer>
       <a href="https://github.com/VanessaSharma"><img src="css/images/github.png" alt="github logo" class="media-handles"></a>
       <a href="https://www.linkedin.com/in/vpalaciossharma/"><img src="css/images/linkedin.png" alt="linkedin Logo" class="media-handles"></a>
     </footer>
+  </div>
   </div>
     </ul>
     </div>
