Add hover popup event for octocat.

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,11 @@
   </nav>
   <br>
   <div class="content-box">
-      <img src="css/images/Octocat.png" alt="">
+    <div id="popup">
+      <a href="https://github.com/VanessaSharma"><img src="css/images/Octocat.png" alt="octocat with link">
+      <span>Click on me to see Vanessa's repositories.</span>
+    </a>
+    </div>
   </div>
   <!-- <div class="footer">
     <footer>
