Add sparkleh jquery effect.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <br>
   <div class="content-box">
       <div class = "blocks">
-        ProACTIVE
+        <h2>ProACTIVE</h2>
       </div>
       <div class = "blocks">
-        Responsive
+        <h2>Responsive</h2>
       </div>
       <div class = "blocks">
-        Functional
+        <h2>Functional<h2>
       </div>
   </div>
   <div class="quote">
